@@ -1,6 +1,0 @@
-{
-  "values": [
-    "#l2weaponry:throwable",
-    "#forge:tools/tridents"
-  ]
-}
