@@ -19,7 +19,6 @@ import java.util.List;
 public class TagGen {
 
 	public static final TagKey<Item> WEAPON = ItemTags.create(new ResourceLocation("forge", "tools/melee_weapons"));
-	public static final TagKey<Item> THROW_WEAPON = ItemTags.create(new ResourceLocation("forge", "tools/throwable_weapons"));
 
 	public static final TagKey<Item> CLAW = ItemTags.create(new ResourceLocation(L2Weaponry.MODID, "claw"));
 	public static final TagKey<Item> DAGGER = ItemTags.create(new ResourceLocation(L2Weaponry.MODID, "dagger"));
@@ -42,14 +41,14 @@ public class TagGen {
 	public static void onBlockTagGen(RegistrateTagsProvider<Block> pvd) {
 	}
 
+	@SuppressWarnings({"unchecked"})
 	public static void onItemTagGen(RegistrateTagsProvider<Item> pvd) {
-		pvd.addTag(THROWABLE).addTag(JAVELIN).addTag(THROWING_AXE);
+		pvd.addTag(Tags.Items.TOOLS_TRIDENTS).addTags(JAVELIN, THROWING_AXE);
 		for (var e : LIST) {
 			pvd.addTag(e.getFirst()).addOptional(e.getSecond());
 		}
-		pvd.addTag(WEAPON).addTags(ItemTags.SWORDS, ItemTags.AXES, THROW_WEAPON,
+		pvd.addTag(WEAPON).addTags(ItemTags.SWORDS, ItemTags.AXES, JAVELIN, THROWING_AXE,
 				CLAW, DAGGER, HAMMER, BATTLE_AXE, SPEAR, MACHETE, NUNCHAKU);
-		pvd.addTag(THROW_WEAPON).addTags(THROWABLE, Tags.Items.TOOLS_TRIDENTS);
 		pvd.addTag(Tags.Items.TOOLS_SHIELDS).addTags(ROUND_SHIELD, PLATE_SHIELD);
 
 	}
