@@ -1,4 +1,5 @@
 2.4.25
+- Allow all weapons with be enchanted with digger tool enchantments as well
 - Add Better Combat compat with compat material weapons
 
 2.4.24
